core/minio/console/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`miniocon.mtaku3.com`)
    kind: Rule
    services:
      - name: objectstorage-minio-console
        port: http
  tls:
    secretName: minio-console-tls
